unpackaged/main/default/objects/ffct__Connection__c/ffct__Connection__c.object-meta.xml
<CustomObject>
    <description>The connection configuration such as OAuth and authorization information.</description>
    <label>Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>