unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__Authorized__c.field-meta.xml
<CustomField>
    <fullName>ffct__Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized</label>
    <type>Checkbox</type>
</CustomField>