unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Environment_Type__c</fullName>
    <label>Environment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer/Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>