unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__Host_URL__c.field-meta.xml
<CustomField>
    <fullName>ffct__Host_URL__c</fullName>
    <label>Host URL</label>
    <type>Url</type>
</CustomField>