unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__OAuth_Code_Exists__c.field-meta.xml
<CustomField>
    <fullName>ffct__OAuth_Code_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAuth Code Exists?</label>
    <type>Checkbox</type>
</CustomField>