unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__OAuth_RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>ffct__OAuth_RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>