unpackaged/main/default/objects/ffct__Connection__c/fields/ffct__User__c.field-meta.xml
<CustomField>
    <fullName>ffct__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>