unpackaged/main/default/objects/ffct__Connection__c/listViews/ffct__All1.listView-meta.xml
<ListView>
    <fullName>ffct__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>